<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">daniel_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_bitacora">Bitacora</string>
    <string name="lbl_tue">Tue</string>
    <string name="lbl_week">Week</string>
    <string name="lbl_thu">Thu</string>
    <string name="msg_tus_estad_sticas">Tus estadísticas deberían de verse así</string>
    <string name="lbl_veces"># Veces</string>
    <string name="lbl_20">20</string>
    <string name="lbl_sorpresa">Sorpresa</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_dia">Dia</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_datos">Datos</string>
    <string name="lbl_stats">Stats</string>
    <string name="lbl_27">27</string>
    <string name="lbl_confusi_n">Confusión</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25% </string>
    <string name="lbl_tus_emociones">Tus Emociones</string>
    <string name="lbl_26">26</string>
    <string name="lbl_100">100%</string>
    <string name="lbl_29">29</string>
    <string name="lbl_verg_enza">Vergüenza</string>
    <string name="lbl_calendario">Calendario</string>
    <string name="lbl_142">14</string>
    <string name="msg_durante_este_tiempo">Durante este tiempo  estuviste calmado</string>
    <string name="lbl_dia_22_70">Dia: 22
70%</string>
    <string name="lbl_92">9</string>
    <string name="lbl_50">50%</string>
    <string name="lbl_sat">Sat</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_11">11</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">+1</string>
    <string name="lbl_15">15</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="lbl_month">Month </string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_252">25</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_0">0</string>
    <string name="lbl_1">1</string>
    <string name="lbl_an_lisis">Análisis</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_miedo">Miedo</string>
    <string name="lbl_4">4</string>
    <string name="lbl_tristeza">Tristeza</string>
    <string name="lbl_5">5</string>
    <string name="lbl_6">6</string>
    <string name="lbl_7">7</string>
    <string name="lbl_8">8</string>
    <string name="lbl_alegr_a">Alegría</string>
    <string name="lbl_9">+9</string>
    <string name="lbl_emociones">Emociones</string>
    <string name="lbl_activity">Activity</string>
    <string name="lbl_april_2024">April 2024</string>
    <string name="lbl_30">30</string>
    <string name="lbl_75">75%</string>
    <string name="msg_35_de_los_d_as">35 % de los días sentiste ansiedad después de comer</string>
    <string name="lbl_calma">Calma </string>
    <string name="lbl_day">Day</string>
    <string name="lbl_intensidad">Intensidad</string>
    <string name="msg_thursday_march">Thursday, March 14, 2024</string>
    <string name="lbl_fri">Fri</string>
    <string name="lbl_enojo">Enojo</string>
    <string name="lbl_march_2024">March 2024</string>
    <string name="lbl_mon">Mon</string>
</resources>
